# CoACT-FSCIL

./: README.md  pyproject.toml  requirements.txt  train.py
dataloaders/: __init__.py  helpter.py  utils.py
dataloaders/datasets/: cub200.py  hf_dataset.py  miniimagenet.py
dataloaders/index_list/: caltech101_index_list.txt  cifar100_index_generator.py  cifar100_index_list.txt  country211_index_list.txt  cub200_index_list.txt  datasets_index_generator.py  dtd_index_list.txt  eurosat_index_list.txt  fgvc_aircraft_index_list.txt  food101_index_list.txt  gtsrb_index_list.txt  mini_imagenet_index_list.txt  oxford_flowers_index_list.txt  oxford_pets_index_list.txt  resisc45_index_list.txt  stanford_cars_index_list.txt  sun397_index_list.txt  voc2007_index_list.txt
losses/: __init__.py  contrastive.py
methods/: __init__.py  fscit.py  helper.py
models/: encoder.py  model_utils.py
utils/: __init__.py  constants.py  train_utils.py
